--- a/config/synthetic_data.yaml
+++ b/config/synthetic_data.yaml
@@ -1,72 +1,88 @@
+# Synthetic Data Configuration
+#
+# This configuration file defines parameters for generating and analyzing synthetic graph sequences
+# to evaluate change point detection methods. The experiment generates different types of random graphs
+# (Erdos-Renyi, Barabasi-Albert, Newman-Watts) with controlled structural changes to test
+# detection algorithms.
+
 graph:
+  # Parameters for different random graph models
+  
   erdos_renyi:
-    n: 50
+    # Erdos-Renyi random graph parameters
+    n: 50                  # Number of nodes in the graph
     probabilities:
-      initial: 0.4
-      changed: 0.7
-    set1: 100
-    set2: 100
+      initial: 0.4         # Edge probability before change point
+      changed: 0.7         # Edge probability after change point
+    set1: 100              # Number of graphs to generate before change
+    set2: 100              # Number of graphs to generate after change
 
   barabasi_albert:
-    n: 50
+    # Barabasi-Albert scale-free network parameters
+    n: 50                 # Number of nodes in the graph
     edges:
-      initial: 3
-      changed: 7
-    set1: 100
-    set2: 100
+      initial: 3          # Number of edges to attach for each new node (before change)
+      changed: 7          # Number of edges to attach for each new node (after change)
+    set1: 100             # Number of graphs before change
+    set2: 100             # Number of graphs after change
 
   newman_watts:
-    n: 30
+    # Newman-Watts small-world network parameters
+    n: 30                 # Number of nodes in the graph
     neighbors:
-      initial: 4
-      changed: 6
+      initial: 4          # Initial number of nearest neighbors
+      changed: 6          # Changed number of nearest neighbors
     rewiring_prob:
-      initial: 0.1
-      changed: 0.3
-    set1: 100
-    set2: 100
+      initial: 0.1        # Initial rewiring probability
+      changed: 0.3        # Changed rewiring probability
+    set1: 100             # Number of graphs before change
+    set2: 100             # Number of graphs after change
 
 analysis:
-  centrality_metrics:
-    - degree
-    - betweenness
-    - eigenvector
-    - closeness
-    - svd
-    - lsvd
+  # Analysis configuration parameters
+  
+  centrality_metrics:     # Graph metrics to compute for change detection
+    - degree              # Node degree centrality
+    - betweenness         # Betweenness centrality
+    - eigenvector         # Eigenvector centrality
+    - closeness           # Closeness centrality
+    - svd                 # Singular Value Decomposition-based metric
+    - lsvd                # Localized SVD-based metric
   
   parameters:
-    threshold: 15
-    detect_change: true
-    change_point: 101
-    test_size: 0.2
-    random_state: 42
-    model_threshold: 20
-  
+    threshold: 15         # Threshold for martingale-based change detection
+    detect_change: true   # Whether to perform change detection
+    change_point: 101     # Known change point for evaluation
+    test_size: 0.2        # Proportion of data for testing
+    random_state: 42      # Random seed for reproducibility
+    model_threshold: 20   # Threshold for the detection model
+
   labels:
-    high: 20
-    low: 1
+    high: 20              # Label value for post-change sequences
+    low: 1                # Label value for pre-change sequences
   
-  plot_range:
+  plot_range:             # Range for plotting results
     start: 0
     end: 200
 
 data_processing:
-  save_intermediate: true
-  probability_threshold: 0.3
+  # Data processing parameters
+  save_intermediate: true           # Whether to save intermediate results
+  probability_threshold: 0.3        # Threshold for probability-based calculations
 
 paths:
+  # File paths for data and outputs
   data:
-    dir: "./data"
-    proximity_file: "./data/Proximity.csv"
+    dir: "./data"                  # Directory for input data
+    proximity_file: "./data/Proximity.csv"  # Example proximity data file
   
   output:
-    dir: "./outputs/synthetic_data/"
+    dir: "./outputs/synthetic_data/"  # Directory for saving results
 
 visualization:
-  save_plots: true
-  num_graph_samples: 5
+  save_plots: true        # Whether to save generated plots
+  num_graph_samples: 5    # Number of sample graphs to visualize
 
 logging:
-  level: "INFO"
-  file: "logs/synthetic_data.log"
+  level: "INFO"           # Logging level (DEBUG, INFO, WARNING, ERROR)
+  file: "logs/synthetic_data.log"  # Log file location
