--- a/synthetic_data/configs/graph_config.yaml
+++ b/synthetic_data/configs/graph_config.yaml
@@ -1,30 +1,44 @@
 # GRAPH GENERATION PARAMETERS
 common:
-  min_n: 50            # Minimum number of nodes in each graph
-  max_n: 100           # Maximum number of nodes in each graph
+  min_n: 100           # Minimum number of nodes in each graph
+  max_n: 100           # Keep constant nodes for better comparison
   min_seq_length: 150  # Minimum sequence length
   max_seq_length: 200  # Maximum sequence length
-  min_segment: 30      # Minimum length between changes
+  min_segment: 40      # Minimum length between changes (increased for stability)
   min_changes: 2       # Minimum number of change points
-  max_changes: 4       # Maximum number of change points
+  max_changes: 3       # Maximum number of change points (reduced for clarity)
 
 # BARABASI-ALBERT PARAMETERS
 ba:
-  initial_edges: 5     # Initial number of edges
-  min_edges: 3         # Minimum number of edges after change
-  max_edges: 10        # Maximum number of edges after change (increased for more variety)
+  initial_edges: 3     # Initial number of edges (sparse)
+  min_edges: 2         # Minimum edges after change
+  max_edges: 8         # Maximum edges after change
+  # This range allows for clear structural changes:
+  # - sparse (2-3 edges): tree-like structure
+  # - medium (4-5 edges): scale-free network
+  # - dense (6-8 edges): highly connected hubs
 
 # ERDOS-RENYI PARAMETERS
 er:
-  initial_p: 0.1       # Initial p parameter
-  min_p: 0.05          # Minimum p parameter after change (decreased for more variety)
-  max_p: 0.25          # Maximum p parameter after change (increased for more variety)
+  initial_p: 0.05      # Initial probability (sparse)
+  min_p: 0.03         # Minimum probability after change
+  max_p: 0.15         # Maximum probability after change
+  # This range creates distinct graph densities:
+  # - sparse (0.03-0.05): few random connections
+  # - medium (0.06-0.10): moderate connectivity
+  # - dense (0.11-0.15): highly connected
 
 # NEWMAN-WATTS PARAMETERS
 nw:
-  initial_k: 4         # Initial k parameter
-  min_k: 2             # Minimum k parameter after change
-  max_k: 8             # Maximum k parameter after change (increased for more variety)
-  initial_p: 0.1       # Initial p parameter
-  min_p: 0.05          # Minimum p parameter after change (decreased for more variety)
-  max_p: 0.25          # Maximum p parameter after change (increased for more variety)
+  initial_k: 4         # Initial nearest neighbors
+  min_k: 2             # Minimum neighbors after change
+  max_k: 8             # Maximum neighbors after change
+  initial_p: 0.05      # Initial rewiring probability
+  min_p: 0.02         # Minimum rewiring probability
+  max_p: 0.20         # Maximum rewiring probability
+  # This creates distinct small-world characteristics:
+  # - k controls the regular lattice structure
+  # - p controls random rewiring:
+  #   - low p (0.02-0.05): mostly regular
+  #   - medium p (0.06-0.15): small-world
+  #   - high p (0.16-0.20): more random
