--- a/src/models/train_config.yaml
+++ b/src/models/train_config.yaml
@@ -5,10 +5,10 @@ paths:
 
 data:
   # Sequence parameters
-  window_size: 20          # Input sequence length
-  stride: 5               # Window stride
-  forecast_horizon: 10     # Number of steps to predict
-  batch_size: 16          # Reduced from 32
+  window_size: 20
+  stride: 5
+  forecast_horizon: 10
+  batch_size: 16
   
   # Feature selection
   use_centrality: true
@@ -28,45 +28,49 @@ data:
 
 model:
   # Model architecture
-  hidden_dim: 64         # Reduced from 128
-  num_layers: 2          # Reduced from 3
-  dropout: 0.2          # Increased for regularization
+  hidden_dim: 32
+  num_layers: 2
+  dropout: 0.2
   
   # Feature processing
   use_node_features: true
   use_edge_features: true
-  combine_features: "concat"  # How to combine different feature types
+  combine_features: "concat"
   
   # GNN parameters
-  gnn_type: "gcn"        # Graph convolution type
-  attention_heads: 4     # For attention-based layers
+  gnn_type: "gcn"
+  attention_heads: 4
   
   # LSTM parameters
   lstm_layers: 2
-  bidirectional: false  # Disabled bidirectional
+  bidirectional: false
   
   # Training parameters
   learning_rate: 0.001
-  weight_decay: 1.0e-5    # Fixed scientific notation
-  clip_grad_norm: 1.0
+  weight_decay: 0.0001
+  clip_grad_norm: 0.5
 
 training:
-  epochs: 100
-  patience: 10           # Early stopping patience
-  val_interval: 1        # Validate every N epochs
-  save_interval: 5       # Save model every N epochs
+  epochs: 1
+  patience: 10
+  val_interval: 1
+  save_interval: 5
   
   # Loss function weights
   loss_weights:
-    centrality: 1.0
-    spectral: 0.5
+    degree: 1.0
+    betweenness: 1.0
+    closeness: 1.0
+    eigenvector: 1.0
+    svd: 0.5
+    lsvd: 0.5
     
   # Learning rate schedule
   lr_schedule:
     factor: 0.5
     patience: 5
-    min_lr: 1.0e-6      # Fixed scientific notation
+    min_lr: 0.000001
 
   # Logging
-  log_interval: 100      # Log every N batches
+  log_interval: 10
   tensorboard: true
