--- a/synthetic_data/configs/graph_config.yaml
+++ b/synthetic_data/configs/graph_config.yaml
@@ -1,16 +1,15 @@
 # GRAPH GENERATION PARAMETERS
 common:
-  min_n: 100           # Minimum number of nodes in each graph
-  max_n: 100           # Keep constant nodes for better comparison
+  nodes: 100           # Number of nodes in each graph
   min_seq_length: 150  # Minimum sequence length
   max_seq_length: 200  # Maximum sequence length
   min_segment: 40      # Minimum length between changes (increased for stability)
-  min_changes: 2       # Minimum number of change points
-  max_changes: 3       # Maximum number of change points (reduced for clarity)
+  min_changes: 1       # Minimum number of change points
+  max_changes: 3       # Maximum number of change points
 
 # BARABASI-ALBERT PARAMETERS
 ba:
-  initial_edges: 3     # Initial number of edges (sparse)
+  edges: 3             # Initial number of edges (sparse)
   min_edges: 2         # Minimum edges after change
   max_edges: 8         # Maximum edges after change
   # This range allows for clear structural changes:
@@ -20,7 +19,7 @@ ba:
 
 # ERDOS-RENYI PARAMETERS
 er:
-  initial_p: 0.05      # Initial probability (sparse)
+  p: 0.05             # Initial probability (sparse)
   min_p: 0.03         # Minimum probability after change
   max_p: 0.15         # Maximum probability after change
   # This range creates distinct graph densities:
@@ -30,12 +29,12 @@ er:
 
 # NEWMAN-WATTS PARAMETERS
 nw:
-  initial_k: 4         # Initial nearest neighbors
+  k: 4                 # Initial nearest neighbors
   min_k: 2             # Minimum neighbors after change
   max_k: 8             # Maximum neighbors after change
-  initial_p: 0.05      # Initial rewiring probability
-  min_p: 0.02         # Minimum rewiring probability
-  max_p: 0.20         # Maximum rewiring probability
+  p: 0.05              # Initial rewiring probability
+  min_p: 0.02          # Minimum rewiring probability
+  max_p: 0.20          # Maximum rewiring probability
   # This creates distinct small-world characteristics:
   # - k controls the regular lattice structure
   # - p controls random rewiring:
